(fix) Fixing CSS alignment for Create Note

--- a/src/components/Note/components/TextEditor.scss
+++ b/src/components/Note/components/TextEditor.scss
@@ -1,4 +1,5 @@
 .ql-editor {
   min-height: 700px;
   overflow-y: initial;
+  padding: 0px;
 }
